--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			window.wxappid = 'wx5ec3d35069383211';
 			window.wxappsecret='d94ea41d9cd2ba03c7cab5fc0e212cec';
 		}
-		window.desc = '我给雄安过周岁';
+		window.desc = '一起来给雄安过周岁';
 		document.addEventListener('touchmove',function(e){e.preventDefault()},{passive:false});
 
 	</script>
